2008-10-01 [colin]	3.5.0cvs142

	* src/imap.c
		Encode prohibited filenames on win32

2008-09-30 [mones]	3.5.0cvs141

	* src/ldapctrl.c
	* src/main.c
	* src/prefs_themes.c
	* src/printing.c
		Fix output of some debug messages

2008-09-30 [colin]	3.5.0cvs140

	* src/addrbook.c
	* src/addrharvest.c
	* src/compose.c
	* src/jpilot.c
	* src/mh.c
	* src/prefs_themes.c
	* src/procheader.c
	* src/procmime.c
	* src/summaryview.c
	* src/common/utils.c
	* src/gtk/sslcertwindow.c
		Win32: Fix time usage; use g_stat

2008-09-29 [colin]	3.5.0cvs139

	* src/common/utils.c
		Fix case-sensitive match of subject
		prefixes on win32

2008-09-29 [colin]	3.5.0cvs138

	* src/folder_item_prefs.c
	* src/folder_item_prefs.h
	* src/matcher.c
	* src/prefs_folder_item.c
	* src/prefs_matcher.c
	* src/summaryview.c
	* src/common/string_match.c
	* src/common/utils.c
		Fix a huge leak (dozens of megs per folder
		change) on Windows: disable regexps 

2008-09-28 [paul]	3.5.0cvs137

	* po/en_GB.po
		updated

2008-09-27 [colin]	3.5.0cvs136

	* src/account.c
	* src/account.h
		Add accessor for cur_account

2008-09-27 [colin]	3.5.0cvs135

	* src/imap.c
		Fix crash when error happen on session establishment

2008-09-26 [mones]	3.5.0cvs134

	* po/es.po
		Updated for release

2008-09-26 [colin]	3.5.0cvs133

	* src/plugins/pgpcore/claws.def
		Fix symbol

2008-09-26 [colin]	3.5.0cvs132

	* src/prefs_common.c
	* src/prefs_common.h
	* src/plugins/pgpcore/pgp_viewer.c
		Add an accessor to prefs_common for plugins
		(Win32 fix)

2008-09-25 [colin]	3.5.0cvs131

	* src/main.c
		Fix bug 1725, 'useless lines in clawsrc'
	* src/plugins/smime/mypgpcore.def
		Add a missing symbol

2008-09-25 [paul]	3.5.0cvs130

	* src/plugins/smime/mypgpcore.def
	* src/plugins/smime/plugin.def
	* src/plugins/smime/version.rc
		add these windows-specific files
		(Thanks to Colin)

2008-09-25 [colin]	3.5.0cvs129

	* src/main.c
		Load standard plugins only on first run

2008-09-25 [colin]	3.5.0cvs128

	* src/codeconv.c
		Fix build...
