@@ -3554,3 +3554,4 @@
 ( cvs diff -u -r 1.22.2.20 -r 1.22.2.21 src/addrbook.c;  cvs diff -u -r 1.6.10.18 -r 1.6.10.19 src/addrharvest.c;  cvs diff -u -r 1.382.2.480 -r 1.382.2.481 src/compose.c;  cvs diff -u -r 1.18.2.26 -r 1.18.2.27 src/jpilot.c;  cvs diff -u -r 1.79.2.65 -r 1.79.2.66 src/mh.c;  cvs diff -u -r 1.3.2.58 -r 1.3.2.59 src/prefs_themes.c;  cvs diff -u -r 1.47.2.48 -r 1.47.2.49 src/procheader.c;  cvs diff -u -r 1.49.2.117 -r 1.49.2.118 src/procmime.c;  cvs diff -u -r 1.395.2.392 -r 1.395.2.393 src/summaryview.c;  cvs diff -u -r 1.36.2.152 -r 1.36.2.153 src/common/utils.c;  cvs diff -u -r 1.9.2.23 -r 1.9.2.24 src/gtk/sslcertwindow.c;  ) > 3.5.0cvs140.patchset
 ( cvs diff -u -r 1.2.2.16 -r 1.2.2.17 src/ldapctrl.c;  cvs diff -u -r 1.115.2.209 -r 1.115.2.210 src/main.c;  cvs diff -u -r 1.3.2.59 -r 1.3.2.60 src/prefs_themes.c;  cvs diff -u -r 1.1.2.15 -r 1.1.2.16 src/printing.c;  ) > 3.5.0cvs141.patchset
 ( cvs diff -u -r 1.179.2.231 -r 1.179.2.232 src/imap.c;  ) > 3.5.0cvs142.patchset
+( cvs diff -u -r 1.179.2.232 -r 1.179.2.233 src/imap.c;  ) > 3.5.0cvs143.patchset
